# FastAPI-Recipe-And-Grocery-Planner

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: test_app.yml
app/: .env.template  alembic.ini  main.py
app/actions/: create_superuser.py
app/alembic/: env.py
app/alembic/versions/: 2025_08_27_1357-40c7d446615a_create_users_table.py  2025_08_27_1615-2d1731c5bfe1_create_users_table.py  2025_08_27_1703-948a35d485d3_update_users_table.py  2025_08_28_1205-ffcd9701cf5b_add_email_and_hashed_password_to_user.py  2025_08_28_1532-195b337e85af_create_users_table.py  2025_08_28_1631-e15e791a760e_create_access_token_table.py  2025_09_01_1430-e9a48083071c_initial.py  2025_09_01_1439-5383cf7fead8_update_users_table.py  2025_09_01_1446-32289814be39_update_profile_table.py  2025_09_09_1929-d9feec052f1e_merge_heads.py  2025_09_09_1933-10c0f32691d3_create_products_table.py  2025_09_12_1039-3f00c6ea3673_initial_migration.py  2025_10_02_0330-b68d46f90064_create_recipes_table.py  2025_10_02_0456-e5a2f8f2f928_created_assosiation_table_updated_.py  2025_10_06_0429-42854d3b8a9c_added_calories_per_gram_to_products.py  2025_10_06_0439-c9de70a29627_changed_categories_per_gram_from_int_to_.py  2025_10_06_0444-10aff5bf2197_changed_calories_per_gram.py  2025_10_06_0816-a1c9d104bf6f_calories_per_unit_now_optional.py  2025_10_07_0645-7b2ebabce60c_renamed_calories_per_unit_to_calories_.py  2025_10_22_0441-ab61beb83573_added_image_url_to_recipe_table.py  2025_10_30_0635-af15d10833dd_add_saved_recipes.py
app/api/: __init__.py
app/core/: config.py  load_env.py
app/crud/: products.py  recipes.py  saved_recipes.py  users.py
app/templates/: base.html  index.html  login.html  planner.html  profile.html  recipe.html  register.html
app/tests/: test_api_products.py  test_db.py  test_db_helper.py  test_main.py  test_utils.py
app/views/: __init__.py  views.py
docker/: Dockerfile  docker-compose.yml
(+50 files in other folders)
